--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bouncing Fish</title>
     <script src="./lib/phaser.js"></script>
+    <script src="./src/Scenes/GameStartScene.js"></script>
     <script src="./src/Scenes/GameScene.js"></script>
     <script src="./src/Scenes/GameOverScene.js"></script>
     <script src="./src/main.js"></script>
